tests/netedit/demandElements/route/basic/invalid_vclass/routes.netedit
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 17.07.2019 08:29:36 by Eclipse SUMO netedit Version v1_2_0+1256-2440f35241
<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/netconvertConfiguration.xsd">

    <input>
        <sumo-net-file value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\input_net.net.xml"/>
    </input>

    <output>
        <output-file value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\net.net.xml"/>
    </output>

    <processing>
        <geometry.max-grade.fix value="false"/>
        <offset.disable-normalization value="true"/>
        <lefthand value="false"/>
    </processing>

    <junctions>
        <no-turnarounds value="true"/>
        <junctions.corner-detail value="5"/>
        <junctions.limit-turn-speed value="5.5"/>
        <rectangular-lane-cut value="false"/>
    </junctions>

    <pedestrian>
        <walkingareas value="false"/>
    </pedestrian>

    <netedit>
        <additional-files value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\additionals.xml"/>
        <additionals-output value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\additionals.xml"/>
        <route-files value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\routes.xml"/>
        <demandelements-output value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\routes.xml"/>
    </netedit>

    <visualisation>
        <window-size value="700,500"/>
        <window-pos value="50,50"/>
        <gui-testing value="true"/>
        <gui-testing-debug value="true"/>
        <gui-testing-debug-gl value="true"/>
    </visualisation>

    <report>
        <no-warnings value="true"/>
        <error-log value="C:/Users/SUMO-Test/.texttest/tmp/netedit.gui.17Jul082921.8948/netedit.gui/demandElements/route/basic/invalid_vclass\log.txt"/>
    </report>

</configuration>
-->

<routes xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/routes_file.xsd">
    <route edges="gneE2 gneE4" color="yellow" id="route_0"/>
</routes>
